# hitsz-info-fetcher

./: .gitignore  AGENTS.md  Cargo.toml  README.md  api.py  auto_refresh.sh  com.hitsz.info-fetcher.cookie-refresh.plist  cron_fetch.py  deploy.sh  jw_grade_analyzer.py  notices.json  run_and_sync.sh  session-cookies.json
src/: auth.rs  browser_auth.rs  extract.rs  hit_auth.rs  hita_auth.rs  lib.rs  main.rs  models.rs
