[package]
name = "hitsz-info-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chromiumoxide = "0.9.1"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "rustls-tls", "charset", "gzip", "brotli", "deflate", "http2"] }
reqwest_cookie_store = "0.8"
scraper = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2.5"
rpassword = "7.5.4"
chrono = "0.4.45"
